--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,10 +15,14 @@ services:
         target: /qdrant/config/production.yaml
     volumes:
       - ./qdrant_data:/qdrant/storage
-    user: 1000
-    read_only: true
-  cache: 
-    build: ./cache
+    user: "1000"
+  cache:
+    container_name: cache 
+    image: ko.local/semantic-cache-a8044edf3c2796d6a5951c230da20a70:latest
+    ports:
+      - 8080:8080
+    depends_on:
+      - qdrant
 
 configs:
   qdrant_config:
