--- a/.github/workflows/vuln.yaml
+++ b/.github/workflows/vuln.yaml
@@ -37,4 +37,4 @@ jobs:
         run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
       - name: Govulncheck
-        run: gosec ./...
+        run: gosec -exclude=G104 ./...
