--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,4 +15,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: ko-build/setup-ko@v0.6
+        env:
+          KO_DOCKER_REPO: ghcr.io/backland-labs/semantic-cache
       - run: ko build --platform=linux/arm64
