local model working

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     user: "1000"
   cache:
     container_name: cache 
-    image: ko.local/semantic-cache-a8044edf3c2796d6a5951c230da20a70:latest
+    image: semcache:latest
     restart: always
     ports:
       - 8080:8080
