--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
   
   cache:
     container_name: cache 
-    image: ko.local/semantic-cache-a8044edf3c2796d6a5951c230da20a70
+    image: ko.local/semantic-cache-a8044edf3c2796d6a5951c230da20a70 # update this to your image
     restart: always
     #pull_policy: always
     ports:
